samples/_failures_safe/1761171120_bd690b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8219c57a.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_8219c57a.c:159:5: error: expected identifier or ‘(’ at end of input
  159 |     Lexer
      |     ^~~~~
./samples/SAFE/__tmp_8219c57a.c:159:5: error: expected declaration or statement at end of input
